src/pages/Home/Home.module.scss
@import '../../assets/variables/scss_variables';

.Home {
    align-items: center;
	display: flex;
    flex-flow: column;
    height: 100%;
    justify-content: center;
    min-height: 100vh;
    pointer-events: none;
    text-align: center;
    z-index: 3;
    .svgBg {
        left: 0;
        position: absolute;
        width: 100%;
    }
    .titlePosition {
        font-size: 4.3rem;
        font-family: 'Playfair Display', serif;
        font-style: italic;        
    }
    .titleEmail {
        color: $accent_color;
        display: inline-block;
        padding: 0.5rem 0 1rem 0;
        pointer-events: all;
    }
}

@media (max-width: 767px) { 
	.Home {
        align-items: center;
        justify-content: center;
        min-height: calc(100vh - 5rem - 10rem);
        position: relative;
        .title {
            text-align: center;
            width: 100%;
            .titleLine {
                display: none;
            }
            .titleEmail {
                font-size: 1.8rem;
                font-weight: bolder;
                text-decoration: underline;
            }
        }
	}
}

@media (max-width: 575px) { 
    .Home {
        .title {
            .titlePosition {
                font-size: 1.8rem;
            }
        }
    }
}

